--- a/index.html
+++ b/index.html
@@ -26,47 +26,50 @@
         </div>
     </header>
 
-    <section class="partners" id="find-partner">
-        <div class="partners__wrapper container">
-            <h2 class="partners__title">Meet a partner for your best holiday</h2>
-            <ul class="partners__list">
-                <li class="partners__list-item partners__list-item-first">
-                    <div class="partners__list-wrapper-img partners__list-img-tv">
-                        <img src="./img/partner1.png" alt="partner number one" width="121" height="121"
-                            class="partners__list-img">
-                    </div>
-                    <h3 class="partners__list-name">Bradley Hunter</h3>
-                    <p class="partners__list-about">Based in Chicago. I love playing tennis and loud music.</p>
-                </li>
-                <li class="partners__list-item partners__list-item-second">
-                    <div class="partners__list-wrapper-img partners__list-img-flask">
-                        <img src="./img/partner2.png" alt="partner number two" width="121" height="120"
-                            class="partners__list-img">
-                    </div>
-                    <h3 class="partners__list-name">Lucas Marsha</h3>
-                    <p class="partners__list-about">I get my inspiration from nature and objects around me. I have a
-                        passion to colours, typography and skateboards.</p>
-                </li>
-                <li class="partners__list-item partners__list-item-thisd">
-                    <div class="partners__list-wrapper-img partners__list-img-coffee">
-                        <img src="./img/partner3.png" alt="partner number three" width="121" height="121"
-                            class="partners__list-img">
-                    </div>
-                    <h3 class="partners__list-name">Heather Walker</h3>
-                    <p class="partners__list-about">I'm a happy person that loves cats and climbing on mountains.</p>
-                </li>
-                <li class="partners__list-item partners__list-item-fourth">
-                    <div class="partners__list-wrapper-img partners__list-img-plane">
-                        <img src="./img/partner4.png" alt="partner number four" width="121" height="121"
-                            class="partners__list-img">
-                    </div>
-                    <h3 class="partners__list-name">Bradley Hunter</h3>
-                    <p class="partners__list-about">Based in Chicago. I love playing tennis and loud music.</p>
-                </li>
-            </ul>
-            <a href="#" class="partners__link-see-other">See other partners</a>
-        </div>
-    </section>
+    <main>
+        <section class="partners" id="find-partner">
+            <div class="partners__wrapper container">
+                <h2 class="partners__title">Meet a partner for your best holiday</h2>
+                <ul class="partners__list">
+                    <li class="partners__list-item partners__list-item-first">
+                        <div class="partners__list-wrapper-img partners__list-img-tv">
+                            <img src="./img/partner1.png" alt="partner number one" width="121" height="121"
+                                class="partners__list-img">
+                        </div>
+                        <h3 class="partners__list-name">Bradley Hunter</h3>
+                        <p class="partners__list-about">Based in Chicago. I love playing tennis and loud music.</p>
+                    </li>
+                    <li class="partners__list-item partners__list-item-second">
+                        <div class="partners__list-wrapper-img partners__list-img-flask">
+                            <img src="./img/partner2.png" alt="partner number two" width="121" height="120"
+                                class="partners__list-img">
+                        </div>
+                        <h3 class="partners__list-name">Lucas Marsha</h3>
+                        <p class="partners__list-about">I get my inspiration from nature and objects around me. I have a
+                            passion to colours, typography and skateboards.</p>
+                    </li>
+                    <li class="partners__list-item partners__list-item-thisd">
+                        <div class="partners__list-wrapper-img partners__list-img-coffee">
+                            <img src="./img/partner3.png" alt="partner number three" width="121" height="121"
+                                class="partners__list-img">
+                        </div>
+                        <h3 class="partners__list-name">Heather Walker</h3>
+                        <p class="partners__list-about">I'm a happy person that loves cats and climbing on mountains.
+                        </p>
+                    </li>
+                    <li class="partners__list-item partners__list-item-fourth">
+                        <div class="partners__list-wrapper-img partners__list-img-plane">
+                            <img src="./img/partner4.png" alt="partner number four" width="121" height="121"
+                                class="partners__list-img">
+                        </div>
+                        <h3 class="partners__list-name">Bradley Hunter</h3>
+                        <p class="partners__list-about">Based in Chicago. I love playing tennis and loud music.</p>
+                    </li>
+                </ul>
+                <a href="#" class="partners__link-see-other">See other partners</a>
+            </div>
+        </section>
+    </main>
 
 </body>
 
